image files for suits downloaded to public folder

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,65 @@
-.App {
+
+ body, html, .container-fluid {
+  height: 100%;
+}
+
+.deck{
+  width: 80px;
+  height: 120px;
+  background-color: red;
+}
+
+.card-container{
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.draw-card{
+  display: inline-block;
+  width: 100px;
+  height: 140px;
+  border: 2px solid black;
+  margin: 20px;
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.spades{
+  margin: auto;
+  background-image: url("./img/spades.png");
+  height: 85px;
+  width: 70px;
+  border: 1px solid grey;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
 }
-
-.App-link {
-  color: #61dafb;
+.diamond{
+  margin: auto;
+  background-image: url("./img/diamond.png");
+  height: 85px;
+  width: 70px;
+  border: 1px solid grey;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.club{
+  margin: auto;
+  background-image: url("./img/club.png");
+  height: 85px;
+  width: 70px;
+  border: 1px solid grey;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.heart{
+  margin: auto;
+  background-image: url("./img/heart.png");
+  height: 85px;
+  width: 70px;
+  border: 1px solid grey;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
 }
