--- a/src/App.css
+++ b/src/App.css
@@ -16,50 +16,175 @@
 
 .draw-card{
   display: inline-block;
-  width: 100px;
-  height: 140px;
+  width: 130px;
+  height: 160px;
   border: 2px solid black;
   margin: 20px;
   background-color: white;
 }
 
+.top-spades{
+  /* margin: auto; */
+  display: inline-block;
+  vertical-align: top;
+  background-image: url("./img/spades.png");
+  height: 20px;
+  width: 20px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.top-club{
+  /* margin: auto; */
+  display: inline-block;
+  vertical-align: top;
+  background-image: url("./img/club.png");
+  height: 20px;
+  width: 20px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.top-diamond{
+  /* margin: auto; */
+  display: inline-block;
+  vertical-align: top;
+  background-image: url("./img/diamond.png");
+  height: 20px;
+  width: 20px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+.top-heart{
+  /* margin: auto; */
+  display: inline-block;
+  vertical-align: top;
+  background-image: url("./img/heart.png");
+  height: 20px;
+  width: 20px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
 .spades{
+  display: inline-block;
   margin: auto;
   background-image: url("./img/spades.png");
-  height: 85px;
+  height: 100px;
   width: 70px;
   border: 1px solid grey;
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
+  margin-bottom: -10px;
 }
 .diamond{
+  display: inline-block;
   margin: auto;
   background-image: url("./img/diamond.png");
-  height: 85px;
+  height: 100px;
   width: 70px;
   border: 1px solid grey;
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
+  margin-bottom: -10px;
 }
 .club{
+  display: inline-block;
   margin: auto;
   background-image: url("./img/club.png");
-  height: 85px;
+  height: 100px;
   width: 70px;
   border: 1px solid grey;
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
+  margin-bottom: -10px;
 }
 .heart{
+  display: inline-block;
   margin: auto;
   background-image: url("./img/heart.png");
-  height: 85px;
+  height: 100px;
   width: 70px;
   border: 1px solid grey;
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
+  margin-bottom: -10px;
+}
+
+
+.card-value-spades, .card-value-club{
+  color: black;
+}
+
+.card-value-diamond, .card-value-heart{
+  color:red;
+}
+
+.card-bottom-value{
+  transform: rotate(180deg);
+  text-align: left;
+  padding-left: 12px;
+  font-size: 1.2em;
+  font-weight: bolder;
+}
+.card-top-value{
+  text-align: left;
+  padding-left: 12px;
+  font-size: 1.2em;
+  font-weight: bolder;
+}
+
+.bottom-spades{
+  /* margin: auto; */
+  display: inline-block;
+  background-image: url("./img/spades.png");
+  height: 20px;
+  width: 20px;
+  margin-bottom: -10px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  transform: rotate(180deg);
+}
+.bottom-club{
+  /* margin: auto; */
+  display: inline-block;
+  background-image: url("./img/club.png");
+  height: 20px;
+  width: 20px;
+  margin-bottom: -10px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  transform: rotate(180deg);
+}
+.bottom-diamond{
+  /* margin: auto; */
+  display: inline-block;
+  background-image: url("./img/diamond.png");
+  height: 20px;
+  width: 20px;
+  margin-bottom: -10px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  transform: rotate(180deg);
+}
+.bottom-heart{
+  /* margin: auto; */
+  display: inline-block;
+  background-image: url("./img/heart.png");
+  height: 20px;
+  width: 20px;
+  margin-bottom: -10px;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  transform: rotate(180deg);
 }
