--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,37 @@
 
- body, html, .container-fluid {
-  height: 100%;
+.container-fluid {
+  height:100%;
+}
+
+.draw-bg{
+  background-image: url("./img/background.jpeg");
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+  height: 70vh;
 }
 
 .deck{
-  width: 80px;
+  width: 90px;
   height: 120px;
-  background-color: red;
+  margin: auto;
+  margin-top: 15px;
+  text-align: center;
+  cursor: pointer;
+  background-image: url('./img/deckback.jpeg');
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
 }
 
 .card-container{
   width: 100%;
   text-align: center;
+}
+
+.draw-center {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .draw-card{
