--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,17 @@
   height: 70vh;
 }
 
+.deck-wrapper{
+  display: inline-block;
+  margin: auto;
+  width: 140px;
+}
+
 .deck{
   width: 90px;
   height: 120px;
   margin: auto;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   text-align: center;
   cursor: pointer;
   background-image: url('./img/deckback.jpeg');
