--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@
   width: 90px;
   height: 120px;
   margin: auto;
-  /* margin-top: 15px; */
   text-align: center;
   cursor: pointer;
   background-image: url('./img/deckback.jpeg');
@@ -49,44 +48,9 @@
   background-color: white;
 }
 
-.top-spades{
-  /* margin: auto; */
+.top-suit{
   display: inline-block;
   vertical-align: top;
-  background-image: url("./img/spades.png");
-  height: 20px;
-  width: 20px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-}
-.top-club{
-  /* margin: auto; */
-  display: inline-block;
-  vertical-align: top;
-  background-image: url("./img/club.png");
-  height: 20px;
-  width: 20px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-}
-.top-diamond{
-  /* margin: auto; */
-  display: inline-block;
-  vertical-align: top;
-  background-image: url("./img/diamond.png");
-  height: 20px;
-  width: 20px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-}
-.top-heart{
-  /* margin: auto; */
-  display: inline-block;
-  vertical-align: top;
-  background-image: url("./img/heart.png");
   height: 20px;
   width: 20px;
   background-position: center; 
@@ -94,46 +58,76 @@
   background-size: cover;
 }
 
-.spades{
-  display: inline-block;
-  margin: auto;
+.top-spades{
   background-image: url("./img/spades.png");
-  height: 100px;
-  width: 70px;
-  border: 1px solid grey;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  margin-bottom: -10px;
+}
+.top-club{
+  background-image: url("./img/club.png");
+}
+.top-diamond{
+  background-image: url("./img/diamond.png");
+}
+.top-heart{
+  background-image: url("./img/heart.png");
+}
+
+
+.spades{
+  background-image: url("./img/spades.png");
 }
 .diamond{
-  display: inline-block;
-  margin: auto;
   background-image: url("./img/diamond.png");
-  height: 100px;
-  width: 70px;
-  border: 1px solid grey;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  margin-bottom: -10px;
+}
+
+.heart{
+  background-image: url("./img/heart.png");
 }
 .club{
-  display: inline-block;
-  margin: auto;
   background-image: url("./img/club.png");
-  height: 100px;
-  width: 70px;
-  border: 1px solid grey;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  margin-bottom: -10px;
 }
-.heart{
+
+/* Image cards */
+
+.Jdiamond{
+  background-image: url("./img/diamond-jack.png");
+}
+.Jspades{
+  background-image: url("./img/spades-jack.jpg");
+}
+.Jclub{
+  background-image: url("./img/club-jack.jpg");
+}
+.Jheart{
+  background-image: url("./img/heart-jack.jpg");
+}
+.Qdiamond{
+  background-image: url("./img/diamond-queen.jpeg");
+}
+.Qspades{
+  background-image: url("./img/spades-queen.png");
+}
+.Qclub{
+  background-image: url("./img/club-queen.png");
+}
+.Qheart{
+  background-image: url("./img/heart-queen.jpg");
+}
+.Kdiamond{
+  background-image: url("./img/diamond-king.jpg");
+}
+.Kspades{
+  background-image: url("./img/spades-king.png");
+}
+.Kclub{
+  background-image: url("./img/club-king.jpg");
+}
+.Kheart{
+  background-image: url("./img/heart-king.png");
+}
+
+.suits{
   display: inline-block;
   margin: auto;
-  background-image: url("./img/heart.png");
   height: 100px;
   width: 70px;
   border: 1px solid grey;
@@ -152,24 +146,20 @@
   color:red;
 }
 
-.card-bottom-value{
-  transform: rotate(180deg);
-  text-align: left;
-  padding-left: 12px;
-  font-size: 1.2em;
-  font-weight: bolder;
-}
-.card-top-value{
+.card-value{
   text-align: left;
   padding-left: 12px;
   font-size: 1.2em;
   font-weight: bolder;
 }
 
-.bottom-spades{
-  /* margin: auto; */
+.card-bottom-value{
+  transform: rotate(180deg);
+}
+
+.bottom-suit{
   display: inline-block;
-  background-image: url("./img/spades.png");
+  /* background-image: url("./img/spades.png"); */
   height: 20px;
   width: 20px;
   margin-bottom: -10px;
@@ -177,40 +167,17 @@
   background-repeat: no-repeat; 
   background-size: cover;
   transform: rotate(180deg);
+}
+
+.bottom-spades{
+  background-image: url("./img/spades.png");
 }
 .bottom-club{
-  /* margin: auto; */
-  display: inline-block;
   background-image: url("./img/club.png");
-  height: 20px;
-  width: 20px;
-  margin-bottom: -10px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  transform: rotate(180deg);
 }
 .bottom-diamond{
-  /* margin: auto; */
-  display: inline-block;
   background-image: url("./img/diamond.png");
-  height: 20px;
-  width: 20px;
-  margin-bottom: -10px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  transform: rotate(180deg);
 }
 .bottom-heart{
-  /* margin: auto; */
-  display: inline-block;
   background-image: url("./img/heart.png");
-  height: 20px;
-  width: 20px;
-  margin-bottom: -10px;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  transform: rotate(180deg);
 }
