--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@
   border: 1px solid grey;
   background-position: center; 
   background-repeat: no-repeat; 
-  background-size: cover;
+  background-size: contain;
   margin-bottom: -10px;
 }
 
